--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 			});
 		</script>
 	
-		<title>Lucio PANEPINTO - Pac-Man</title>
+		<title>Airtet - Pac-Man</title>
 	</head>
 		
 	<body>
@@ -204,7 +204,7 @@
 	
 		<div id="home">
 			<h1>pac-man</h1>
-			<h3>Lucio PANEPINTO<br><em>2015</em></h3>
+			<h3>Airtel - Pacman<br><em>1985</em></h3>
 			<canvas id="canvas-home-title-pacman"></canvas>
 			<div id="presentation">
 				<div id="presentation-titles">character &nbsp;/&nbsp; nickname</div>
@@ -216,13 +216,11 @@
 			<canvas id="trailer"></canvas>
 			<div class="help-button">- help -</div>
 			<a class="sound" href="javascript:void(0);" data-sound="on"><img src="img/sound-on.png" alt="" border="0"></a>
-			<a class="github" target="_blank" href="https://github.com/luciopanepinto/pacman"><img src="img/github.png" alt="GitHub - Lucio PANEPINTO - Pac-Man"></a>
-			<a class="putchu" target="_top" href="http://www.putchu.be"><img src="http://www.putchu.be/img/intro/player.png" height="95px" alt="Putchu">www.putchu.be</a>
+			
 		</div>
 	
 		<div id="panel">
 			<h1>pac-man</h1>
-			<a class="putchu" target="_top" href="http://www.putchu.be"><img src="http://www.putchu.be/img/intro/player.png" height="65px" alt="Putchu">www.putchu.be</a>
 			<canvas id="canvas-panel-title-pacman"></canvas>
 			<div id="score"><h2>1UP</h2><span>00</span></div>
 			<div id="highscore"><h2>High Score</h2><span>00</span></div>
