--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 			</table>
 		</div>
 	
-		<div id="home">
+<!-- 		<div id="home">
 			<h1>pac-man</h1>
 			<h3>Airtel - Pacman<br><em>1985</em></h3>
 			<canvas id="canvas-home-title-pacman"></canvas>
@@ -217,7 +217,7 @@
 			<div class="help-button">- help -</div>
 			<a class="sound" href="javascript:void(0);" data-sound="on"><img src="img/sound-on.png" alt="" border="0"></a>
 			
-		</div>
+		</div> -->
 	
 		<div id="panel">
 			<h1>pac-man</h1>
