--- a/index.html
+++ b/index.html
@@ -202,22 +202,22 @@
 			</table>
 		</div>
 	
-<!-- 		<div id="home">
+		<div id="home">
 			<h1>pac-man</h1>
 			<h3>Airtel - Pacman<br><em>1985</em></h3>
 			<canvas id="canvas-home-title-pacman"></canvas>
 			<div id="presentation">
-				<div id="presentation-titles">character &nbsp;/&nbsp; nickname</div>
-				<canvas id="canvas-presentation-blinky"></canvas><div id="presentation-character-blinky">- shadow</div><div id="presentation-name-blinky">"blinky"</div>
+<!-- 				<div id="presentation-titles">character &nbsp;/&nbsp; nickname</div> -->
+<!-- 				<canvas id="canvas-presentation-blinky"></canvas><div id="presentation-character-blinky">- shadow</div><div id="presentation-name-blinky">"blinky"</div>
 				<canvas id="canvas-presentation-pinky"></canvas><div id="presentation-character-pinky">- speedy</div><div id="presentation-name-pinky">"pinky"</div>
 				<canvas id="canvas-presentation-inky"></canvas><div id="presentation-character-inky">- bashful</div><div id="presentation-name-inky">"inky"</div>
-				<canvas id="canvas-presentation-clyde"></canvas><div id="presentation-character-clyde">- pokey</div><div id="presentation-name-clyde">"clyde"</div>
+				<canvas id="canvas-presentation-clyde"></canvas><div id="presentation-character-clyde">- pokey</div><div id="presentation-name-clyde">"clyde"</div> -->
 			</div>
 			<canvas id="trailer"></canvas>
 			<div class="help-button">- help -</div>
 			<a class="sound" href="javascript:void(0);" data-sound="on"><img src="img/sound-on.png" alt="" border="0"></a>
 			
-		</div> -->
+		</div>
 	
 		<div id="panel">
 			<h1>pac-man</h1>
