--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
 			<h3>Airtel - Pacman<br><em>1985</em></h3>
 			<canvas id="canvas-home-title-pacman"></canvas>
 			<div id="presentation">
-				<div id="presentation-titles">character &nbsp;/&nbsp; nickname</div>
-				<canvas id="canvas-presentation-blinky"></canvas><div id="presentation-character-blinky">- shadow</div><div id="presentation-name-blinky">"blinky"</div>
-				<canvas id="canvas-presentation-pinky"></canvas><div id="presentation-character-pinky">- speedy</div><div id="presentation-name-pinky">"pinky"</div>
-				<canvas id="canvas-presentation-inky"></canvas><div id="presentation-character-inky">- bashful</div><div id="presentation-name-inky">"inky"</div>
-				<canvas id="canvas-presentation-clyde"></canvas><div id="presentation-character-clyde">- pokey</div><div id="presentation-name-clyde">"clyde"</div>
+				<div id="presentation-titles"></div>
+				<canvas id="canvas-presentation-blinky"></canvas><div id="presentation-character-blinky"></div><div id="presentation-name-blinky"></div>
+				<canvas id="canvas-presentation-pinky"></canvas><div id="presentation-character-pinky"></div><div id="presentation-name-pinky"></div>
+				<canvas id="canvas-presentation-inky"></canvas><div id="presentation-character-inky"></div><div id="presentation-name-inky"></div>
+				<canvas id="canvas-presentation-clyde"></canvas><div id="presentation-character-clyde"></div><div id="presentation-name-clyde"></div>
 			</div>
 			<canvas id="trailer"></canvas>
 			<div class="help-button">- help -</div>
