--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 			<h3>Airtel - Pacman<br><em>1985</em></h3>
 			<canvas id="canvas-home-title-pacman"></canvas>
 			<div id="presentation">
-				<div id="presentation-titles"></div>
+				<div id="presentation-titles">Click Space to Play</div>
 				<canvas id="canvas-presentation-blinky"></canvas><div id="presentation-character-blinky"></div><div id="presentation-name-blinky"></div>
 				<canvas id="canvas-presentation-pinky"></canvas><div id="presentation-character-pinky"></div><div id="presentation-name-pinky"></div>
 				<canvas id="canvas-presentation-inky"></canvas><div id="presentation-character-inky"></div><div id="presentation-name-inky"></div>
