--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			
 			gtag('config', 'UA-121647007-2');
 		</script>
-	
+		<link rel="icon" type="image/x-icon" href="https://assets.airtel.in/static-assets/new-home/img/favicon.ico"> 
+
 		<meta property="og:image" content="https://pacman-e281c.firebaseapp.com/img/preview.png">
 		<meta property="og:url" content="https://pacman-e281c.firebaseapp.com/">
 		<meta property="og:description" content="Pac-Man game written in HTML5 + CSS3 + jQuery with Canvas. This WebApp is a Responsive Web Design (RWD) website.">
